--- a/Koting/Koting/View/MeetingListStoryboard.storyboard
+++ b/Koting/Koting/View/MeetingListStoryboard.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--List-->
+        <!--KOTING-->
         <scene sceneID="fLH-aS-7ti">
             <objects>
                 <viewController id="UvI-Gg-ac9" customClass="MeetingListVC" customModule="Koting" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,46 +20,65 @@
                                 <rect key="frame" x="0.0" y="44" width="375" height="574"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MeetingListTableViewCell" rowHeight="94" id="hdB-I3-qr9" customClass="MeetingListTableViewCell" customModule="Koting" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="94"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MeetingListTableViewCell" rowHeight="134.5" id="hdB-I3-qr9" customClass="MeetingListTableViewCell" customModule="Koting" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="134.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hdB-I3-qr9" id="49W-Rs-UEp">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="94"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="134.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="70" translatesAutoresizingMaskIntoConstraints="NO" id="nAU-E1-kv8">
-                                                    <rect key="frame" x="36" y="7" width="303" height="80"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ai9-yx-uGO">
+                                                    <rect key="frame" x="16" y="11" width="343" height="112.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zeG-Tn-wcF">
-                                                            <rect key="frame" x="0.0" y="30" width="41.5" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N6K-eK-pMF">
-                                                            <rect key="frame" x="111.5" y="30" width="41.5" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jNq-3P-r7i">
-                                                            <rect key="frame" x="223" y="0.0" width="80" height="80"/>
-                                                        </imageView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="70" translatesAutoresizingMaskIntoConstraints="NO" id="nAU-E1-kv8">
+                                                            <rect key="frame" x="20" y="16" width="303" height="80.5"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zeG-Tn-wcF">
+                                                                    <rect key="frame" x="0.0" y="30" width="41.5" height="20.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N6K-eK-pMF">
+                                                                    <rect key="frame" x="111.5" y="30" width="41.5" height="20.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jNq-3P-r7i">
+                                                                    <rect key="frame" x="223" y="0.5" width="80" height="80"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="80" id="nqu-t1-d2u"/>
+                                                                        <constraint firstAttribute="height" constant="80" id="s8y-Dc-NPm"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="303" id="HSP-pN-mC4"/>
+                                                            </constraints>
+                                                        </stackView>
                                                     </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="303" id="HSP-pN-mC4"/>
+                                                        <constraint firstAttribute="bottom" secondItem="nAU-E1-kv8" secondAttribute="bottom" constant="16" id="ApP-fq-N7n"/>
+                                                        <constraint firstItem="nAU-E1-kv8" firstAttribute="top" secondItem="Ai9-yx-uGO" secondAttribute="top" constant="16" id="TTx-8n-V8a"/>
+                                                        <constraint firstAttribute="height" constant="113" id="bPm-bJ-y83"/>
+                                                        <constraint firstItem="nAU-E1-kv8" firstAttribute="centerX" secondItem="Ai9-yx-uGO" secondAttribute="centerX" id="dlw-yO-BsK"/>
                                                     </constraints>
-                                                </stackView>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="nAU-E1-kv8" firstAttribute="leading" secondItem="49W-Rs-UEp" secondAttribute="leading" constant="36" id="Fo9-a3-blS"/>
-                                                <constraint firstItem="nAU-E1-kv8" firstAttribute="top" secondItem="49W-Rs-UEp" secondAttribute="top" constant="7" id="fNf-LL-C18"/>
+                                                <constraint firstItem="Ai9-yx-uGO" firstAttribute="bottom" secondItem="49W-Rs-UEp" secondAttribute="bottomMargin" id="DSy-CC-FHf"/>
+                                                <constraint firstItem="Ai9-yx-uGO" firstAttribute="top" secondItem="49W-Rs-UEp" secondAttribute="topMargin" id="NEq-cS-04I"/>
+                                                <constraint firstItem="Ai9-yx-uGO" firstAttribute="leading" secondItem="49W-Rs-UEp" secondAttribute="leadingMargin" id="OQN-L9-ccO"/>
+                                                <constraint firstItem="Ai9-yx-uGO" firstAttribute="trailing" secondItem="49W-Rs-UEp" secondAttribute="trailingMargin" id="oNN-aP-vkq"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="animalShapeImage" destination="jNq-3P-r7i" id="sAG-Vb-rer"/>
                                             <outlet property="collegeName" destination="zeG-Tn-wcF" id="mfa-cl-7tA"/>
                                             <outlet property="numberOfParticipants" destination="N6K-eK-pMF" id="dZS-vD-kBo"/>
+                                            <outlet property="tableViewCellLayer" destination="Ai9-yx-uGO" id="hx1-Kf-aki"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -74,18 +93,19 @@
                             <constraint firstItem="VRs-Mh-5jg" firstAttribute="trailing" secondItem="Ovb-vu-7Ed" secondAttribute="trailing" id="kes-Bd-eNL"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="List" id="lA3-6U-dTk"/>
-                    <navigationItem key="navigationItem" id="dAm-c2-XEa">
+                    <tabBarItem key="tabBarItem" title="List" image="chart.bar.doc.horizontal" catalog="system" selectedImage="chart.bar.doc.horizontal.fill" id="lA3-6U-dTk"/>
+                    <navigationItem key="navigationItem" title="KOTING" id="dAm-c2-XEa">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="folder" catalog="system" id="GcR-Pj-RZQ">
+                            <color key="tintColor" systemColor="systemOrangeColor"/>
                             <connections>
-                                <segue destination="djE-Fc-LMi" kind="show" id="nln-Ou-qFx"/>
+                                <segue destination="djE-Fc-LMi" kind="show" identifier="" id="nln-Ou-qFx"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="Ovb-vu-7Ed" id="0RC-eE-WYp"/>
-                        <segue destination="KP4-dU-TG8" kind="show" id="57c-6E-yGG"/>
+                        <segue destination="KP4-dU-TG8" kind="show" identifier="MeetingDetailInfo" id="57c-6E-yGG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="34K-N5-xi2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -246,6 +266,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" systemColor="systemOrangeColor"/>
                     </tabBar>
                     <connections>
                         <segue destination="hG1-CI-edF" kind="relationship" relationship="viewControllers" id="cwL-6A-w14"/>
@@ -268,6 +289,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="chart.bar.doc.horizontal" catalog="system" width="115" height="128"/>
+        <image name="chart.bar.doc.horizontal.fill" catalog="system" width="115" height="128"/>
         <image name="folder" catalog="system" width="128" height="97"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
