--- a/Koting/Koting/View/MeetingListStoryboard.storyboard
+++ b/Koting/Koting/View/MeetingListStoryboard.storyboard
@@ -135,14 +135,54 @@
                     <view key="view" contentMode="scaleToFill" id="bLL-zb-XDf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vxF-n5-DDY">
+                                <rect key="frame" x="32.5" y="191" width="310" height="310"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="310" id="PWs-y2-lNg"/>
+                                    <constraint firstAttribute="height" constant="310" id="qW8-wK-0kf"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HTB-lb-qTd">
+                                <rect key="frame" x="137.5" y="61" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Ffr-xL-TBW"/>
+                                    <constraint firstAttribute="height" constant="100" id="XGH-HH-vHL"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0NW-UG-3rt">
+                                <rect key="frame" x="97.5" y="513" width="180" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="ZhE-vc-MtX"/>
+                                    <constraint firstAttribute="width" constant="180" id="vB3-76-vxC"/>
+                                </constraints>
+                                <state key="normal" title="신청하기">
+                                    <color key="titleColor" systemColor="systemOrangeColor"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="OGA-T5-gf7"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="HTB-lb-qTd" firstAttribute="centerX" secondItem="bLL-zb-XDf" secondAttribute="centerX" id="K1N-oA-Nri"/>
+                            <constraint firstItem="vxF-n5-DDY" firstAttribute="centerX" secondItem="bLL-zb-XDf" secondAttribute="centerX" id="KYp-Cw-q0d"/>
+                            <constraint firstItem="OGA-T5-gf7" firstAttribute="bottom" secondItem="0NW-UG-3rt" secondAttribute="bottom" constant="45" id="NbU-pC-VdB"/>
+                            <constraint firstItem="vxF-n5-DDY" firstAttribute="top" secondItem="HTB-lb-qTd" secondAttribute="bottom" constant="30" id="YEB-YH-451"/>
+                            <constraint firstItem="0NW-UG-3rt" firstAttribute="centerX" secondItem="bLL-zb-XDf" secondAttribute="centerX" id="pSz-tu-cE1"/>
+                            <constraint firstItem="HTB-lb-qTd" firstAttribute="top" secondItem="OGA-T5-gf7" secondAttribute="top" constant="17" id="qgU-TV-tQp"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="zgf-t8-xjr"/>
+                    <connections>
+                        <outlet property="applyBtnTapped" destination="0NW-UG-3rt" id="h1h-fp-Jng"/>
+                        <outlet property="imageView" destination="HTB-lb-qTd" id="s6F-GM-D6T"/>
+                        <outlet property="meetingInfoView" destination="vxF-n5-DDY" id="nJD-I7-7zS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q8u-5R-Vpy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5023" y="-384"/>
+            <point key="canvasLocation" x="5021.6000000000004" y="-384.55772113943033"/>
         </scene>
         <!--List-->
         <scene sceneID="JBn-TD-u8o">
