--- a/Koting/Koting/View/MeetingListStoryboard.storyboard
+++ b/Koting/Koting/View/MeetingListStoryboard.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--KOTING-->
+        <!--미팅 리스트-->
         <scene sceneID="fLH-aS-7ti">
             <objects>
                 <viewController id="UvI-Gg-ac9" customClass="MeetingListVC" customModule="Koting" customModuleProvider="target" sceneMemberID="viewController">
@@ -94,7 +94,7 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="List" image="chart.bar.doc.horizontal" catalog="system" selectedImage="chart.bar.doc.horizontal.fill" id="lA3-6U-dTk"/>
-                    <navigationItem key="navigationItem" title="KOTING" id="dAm-c2-XEa">
+                    <navigationItem key="navigationItem" title="미팅 리스트" id="dAm-c2-XEa">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="folder" catalog="system" id="GcR-Pj-RZQ">
                             <color key="tintColor" systemColor="systemOrangeColor"/>
                             <connections>
@@ -212,10 +212,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="29" translatesAutoresizingMaskIntoConstraints="NO" id="pV4-dQ-GB3">
-                                <rect key="frame" x="36" y="20" width="300" height="238"/>
+                                <rect key="frame" x="36" y="20" width="303" height="238"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="GbN-1e-1jl">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="60"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="303" height="60"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="인  원" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h0J-sb-jLU">
                                                 <rect key="frame" x="0.0" y="0.0" width="70" height="60"/>
@@ -228,7 +228,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="5WF-zp-7Uz">
-                                                <rect key="frame" x="100" y="13" width="200" height="34"/>
+                                                <rect key="frame" x="100" y="13" width="203" height="34"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="34" id="6Sp-Ix-OwY"/>
                                                 </constraints>
@@ -238,7 +238,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Xe0-Ud-wd9">
-                                        <rect key="frame" x="0.0" y="89" width="300" height="60"/>
+                                        <rect key="frame" x="0.0" y="89" width="303" height="60"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="오픈카톡링크" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e4L-0K-W54">
                                                 <rect key="frame" x="0.0" y="0.0" width="70" height="60"/>
@@ -251,7 +251,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="xI8-EA-Fmv">
-                                                <rect key="frame" x="100" y="13" width="200" height="34"/>
+                                                <rect key="frame" x="100" y="13" width="203" height="34"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="34" id="o7G-9r-3f7"/>
                                                 </constraints>
@@ -261,7 +261,7 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ZE-Nr-cfm">
-                                        <rect key="frame" x="0.0" y="178" width="300" height="60"/>
+                                        <rect key="frame" x="0.0" y="178" width="303" height="60"/>
                                         <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="TEM-KY-Cb2"/>
