--- a/Koting/Koting/View/Base.lproj/Main.storyboard
+++ b/Koting/Koting/View/Base.lproj/Main.storyboard
@@ -17,13 +17,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Koting" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LNe-jZ-qmj">
-                                <rect key="frame" x="0.0" y="130" width="375" height="72"/>
+                                <rect key="frame" x="0.0" y="150" width="375" height="72"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="60"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GT8-Ux-cYz">
-                                <rect key="frame" x="80" y="382" width="215" height="50"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GT8-Ux-cYz" customClass="CustomButton" customModule="Koting" customModuleProvider="target">
+                                <rect key="frame" x="60" y="417" width="255" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="VpZ-ii-TGH"/>
@@ -46,11 +46,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="LNe-jZ-qmj" secondAttribute="trailing" id="3gL-iz-agC"/>
-                            <constraint firstItem="GT8-Ux-cYz" firstAttribute="top" secondItem="LNe-jZ-qmj" secondAttribute="bottom" constant="180" id="D45-kR-Kzw"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GT8-Ux-cYz" secondAttribute="trailing" constant="80" id="Vaf-mG-BrY"/>
+                            <constraint firstItem="GT8-Ux-cYz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VFu-2m-hA9"/>
                             <constraint firstItem="LNe-jZ-qmj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="b5E-cN-iSW"/>
-                            <constraint firstItem="GT8-Ux-cYz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="80" id="kdU-5X-ceF"/>
-                            <constraint firstItem="LNe-jZ-qmj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="130" id="mLC-Aj-vbj"/>
+                            <constraint firstItem="GT8-Ux-cYz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="iTG-tX-jML"/>
+                            <constraint firstItem="LNe-jZ-qmj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="mLC-Aj-vbj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="GT8-Ux-cYz" secondAttribute="bottom" constant="200" id="qEE-Wj-jyg"/>
                         </constraints>
                     </view>
                     <connections>
