동물 이미지 수정

--- a/Koting/Koting/View/MeetingListStoryboard.storyboard
+++ b/Koting/Koting/View/MeetingListStoryboard.storyboard
@@ -93,9 +93,9 @@
                             <constraint firstItem="VRs-Mh-5jg" firstAttribute="trailing" secondItem="Ovb-vu-7Ed" secondAttribute="trailing" id="kes-Bd-eNL"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="List" image="chart.bar.doc.horizontal" catalog="system" selectedImage="chart.bar.doc.horizontal.fill" id="lA3-6U-dTk"/>
+                    <tabBarItem key="tabBarItem" title="List" image="chart.bar.doc.horizontal" catalog="system" selectedImage="house" id="lA3-6U-dTk"/>
                     <navigationItem key="navigationItem" title="미팅 리스트" id="dAm-c2-XEa">
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="folder" catalog="system" id="GcR-Pj-RZQ">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="list.star" catalog="system" id="GcR-Pj-RZQ">
                             <connections>
                                 <segue destination="djE-Fc-LMi" kind="show" identifier="" id="nln-Ou-qFx"/>
                             </connections>
@@ -136,7 +136,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0NW-UG-3rt" customClass="CustomButton" customModule="Koting" customModuleProvider="target">
-                                <rect key="frame" x="97.5" y="559" width="180" height="60"/>
+                                <rect key="frame" x="97.5" y="557" width="180" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="ZhE-vc-MtX"/>
                                     <constraint firstAttribute="width" constant="180" id="vB3-76-vxC"/>
@@ -149,7 +149,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="PVG-te-0RH">
-                                <rect key="frame" x="120" y="61" width="135" height="128.5"/>
+                                <rect key="frame" x="120" y="59" width="135" height="128.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HTB-lb-qTd">
                                         <rect key="frame" x="17.5" y="0.0" width="100" height="100"/>
@@ -171,73 +171,73 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vxF-n5-DDY">
-                                <rect key="frame" x="32.5" y="209" width="310" height="310"/>
+                                <rect key="frame" x="32.5" y="207" width="310" height="310"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="VL8-g7-wP0">
                                         <rect key="frame" x="0.0" y="0.0" width="310" height="310"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="tUu-2G-uph">
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="tUu-2G-uph">
                                                 <rect key="frame" x="0.0" y="0.0" width="310" height="77.5"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="단과대학" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kC9-s2-ikS">
-                                                        <rect key="frame" x="0.0" y="0.0" width="155" height="77.5"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="단과대학" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kC9-s2-ikS">
+                                                        <rect key="frame" x="0.0" y="0.0" width="140" height="77.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bCR-AF-6HA">
-                                                        <rect key="frame" x="155" y="0.0" width="155" height="77.5"/>
+                                                        <rect key="frame" x="170" y="0.0" width="140" height="77.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="hc0-WE-e4f">
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="hc0-WE-e4f">
                                                 <rect key="frame" x="0.0" y="77.5" width="310" height="77.5"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MBTI" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ffU-OX-HOi">
-                                                        <rect key="frame" x="0.0" y="0.0" width="155" height="77.5"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MBTI" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ffU-OX-HOi">
+                                                        <rect key="frame" x="0.0" y="0.0" width="145" height="77.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ES0-Nv-Emd">
-                                                        <rect key="frame" x="155" y="0.0" width="155" height="77.5"/>
+                                                        <rect key="frame" x="165" y="0.0" width="145" height="77.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="OZM-7P-tB3">
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="OZM-7P-tB3">
                                                 <rect key="frame" x="0.0" y="155" width="310" height="77.5"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="나이" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z7o-jM-Dfs">
-                                                        <rect key="frame" x="0.0" y="0.0" width="155" height="77.5"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="나이" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z7o-jM-Dfs">
+                                                        <rect key="frame" x="0.0" y="0.0" width="145" height="77.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cvr-cg-DXp">
-                                                        <rect key="frame" x="155" y="0.0" width="155" height="77.5"/>
+                                                        <rect key="frame" x="165" y="0.0" width="145" height="77.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="3IH-O0-2jC">
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="3IH-O0-2jC">
                                                 <rect key="frame" x="0.0" y="232.5" width="310" height="77.5"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="키" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lql-2d-JuW">
-                                                        <rect key="frame" x="0.0" y="0.0" width="155" height="77.5"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="키" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lql-2d-JuW">
+                                                        <rect key="frame" x="0.0" y="0.0" width="145" height="77.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D7R-LD-K4R">
-                                                        <rect key="frame" x="155" y="0.0" width="155" height="77.5"/>
+                                                        <rect key="frame" x="165" y="0.0" width="145" height="77.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -263,7 +263,7 @@
                         <constraints>
                             <constraint firstItem="vxF-n5-DDY" firstAttribute="centerX" secondItem="bLL-zb-XDf" secondAttribute="centerX" id="KYp-Cw-q0d"/>
                             <constraint firstItem="PVG-te-0RH" firstAttribute="leading" secondItem="OGA-T5-gf7" secondAttribute="leading" constant="120" id="Zc8-0L-mAE"/>
-                            <constraint firstItem="PVG-te-0RH" firstAttribute="top" secondItem="OGA-T5-gf7" secondAttribute="top" constant="17" id="fmI-J3-q8l"/>
+                            <constraint firstItem="PVG-te-0RH" firstAttribute="top" secondItem="OGA-T5-gf7" secondAttribute="top" constant="-37" id="fmI-J3-q8l"/>
                             <constraint firstItem="0NW-UG-3rt" firstAttribute="top" secondItem="vxF-n5-DDY" secondAttribute="bottom" constant="40" id="h2W-nc-nUM"/>
                             <constraint firstItem="0NW-UG-3rt" firstAttribute="centerX" secondItem="bLL-zb-XDf" secondAttribute="centerX" id="pSz-tu-cE1"/>
                             <constraint firstItem="PVG-te-0RH" firstAttribute="centerX" secondItem="bLL-zb-XDf" secondAttribute="centerX" id="sQn-cG-d2Z"/>
@@ -273,6 +273,7 @@
                     <navigationItem key="navigationItem" id="zgf-t8-xjr"/>
                     <connections>
                         <outlet property="ageLabel" destination="Cvr-cg-DXp" id="jQY-aQ-Xuq"/>
+                        <outlet property="animalLabel" destination="4nq-4C-Ggl" id="zDB-zB-bfq"/>
                         <outlet property="applyBtnTapped" destination="0NW-UG-3rt" id="h1h-fp-Jng"/>
                         <outlet property="collegeLabel" destination="bCR-AF-6HA" id="fZX-Z7-uLG"/>
                         <outlet property="heightLabel" destination="D7R-LD-K4R" id="lpk-oW-zeL"/>
@@ -291,8 +292,8 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hG1-CI-edF" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="List" id="tot-Rg-8Oc"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yIh-dn-uTT">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="yIh-dn-uTT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -436,8 +437,8 @@
     <color key="tintColor" systemColor="labelColor"/>
     <resources>
         <image name="chart.bar.doc.horizontal" catalog="system" width="115" height="128"/>
-        <image name="chart.bar.doc.horizontal.fill" catalog="system" width="115" height="128"/>
-        <image name="folder" catalog="system" width="128" height="97"/>
+        <image name="house" catalog="system" width="128" height="106"/>
+        <image name="list.star" catalog="system" width="128" height="94"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
